--- a/index.html
+++ b/index.html
@@ -1,59 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="assets/style.css" />
+    <title>spell-book <i class="fas fa-project-diagram "></i></title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/style.css">
-    <title>spell-book</title>
-</head>
-
-<body>
+  <body>
     <header class="container-fluid bg-info text-light text-center">
-        <h1>spell-book</h1>
+      <h1>spell-book</h1>
     </header>
     <main class="container">
-        <div class="row m-2 p-2">
-            <div class="col-6 no-overflow">
-                <h1 class="text-center">Spells:</h1>
-                <div id="spells"></div>
-            </div>
-            <div class="col-6 no-overflow">
-                <h1 class="text-center">My Spells:</h1>
-                <div id="mySpells"></div>
-            </div>
+      <div class="row m-2 p-2">
+        <div class="col-6 no-overflow">
+          <h1 class="text-center">Spells:</h1>
+          <div id="spells"></div>
         </div>
-        <div class="row text-center">
-            <div class="col-12">
-                <h1>Details:</h1>
-            </div>
+        <div class="col-6 no-overflow">
+          <h1 class="text-center">My Spells:</h1>
+          <div id="mySpells"></div>
         </div>
-
-        <div class="row justify-content-center">
-            <div class="col-8 p-3 m-3">
-                <div id="activeSpell"></div>
-            </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-12">
+          <h1>Details:</h1>
         </div>
+      </div>
 
-
-
-
-
+      <div class="row justify-content-center">
+        <div class="col-8 p-3 m-3">
+          <div id="activeSpell"></div>
+        </div>
+      </div>
     </main>
     <footer class="container-fluid bg-info text-light">
-        <div class="row text-center">
-            <div class="col">
-                <p><small>Made with love by Codeworks</small></p>
-            </div>
+      <div class="row text-center">
+        <div class="col">
+          <p><small>Made with love by Codeworks</small></p>
         </div>
+      </div>
     </footer>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
-        integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ=" crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"
+      integrity="sha256-T/f7Sju1ZfNNfBh7skWn0idlCBcI3RwdLSS4/I7NQKQ="
+      crossorigin="anonymous"
+    ></script>
     <script src="app/main.js" type="module"></script>
-</body>
-
+  </body>
 </html>
